Phase 0b: answer the five open questions from the server jar
Verified against the live HytaleServer.jar (md5 cb42e8cd…), byte-identical to
the jar FactionMod compiles against, so these are the signatures running on the
server rather than inferences from a third-party plugin.

Two store-page verdicts flip, and both were wrong for the same reason: they were
inferred from FactionMod not using an API, which is not evidence one is absent.

5.1  PlayerChatEvent exposes isCancelled() AND setFormatter(Formatter). The
     design changes: SupporterMod must never cancel or re-broadcast, only set a
     formatter, which makes the faction-chat leak structurally impossible.
5.2  FLIPS POSITIVE. PlayerSetupConnectEvent is ICancellable with a rejection
     Message, at auth stage, UUID already known. Priority queue is buildable.
5.3  POSITIVE. HytaleServerConfig.getMaxPlayers() + Universe.getPlayerCount().
5.4  CONFIRMED NEGATIVE. PlayerRef.username is private final with no setter, so
     the nameplate cannot change server-side. Chat-only /nick, and say so.
5.5  FLIPS POSITIVE, with a caveat. ServerPlayerListModule exists and the entry
     username is a public mutable String — but that module owns the list and
     rebroadcasts on a ping timer, so decoration races it. Spike first.
5.5b NEGATIVE. PlayerStorage is UUID-keyed with no username index, so
     pending_grants stays the main path exactly as designed.
5.6  The server bundles no JDBC at all, so nothing conflicts with the shaded
     driver. Records what a successful native load looks like in the log, and
     that --enable-native-access is the fix if a future JDK blocks it.

Also corrects two things this report previously got wrong: there IS a
TaskRegistry for tracking futures at shutdown (though not for creating them),
and PlayerEvent.getPlayerRef() returns Ref<EntityStore>, not PlayerRef.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>